# sketchflow

./: CMakeLists.txt  README.md  iconres.qrc  main.cpp  mainwindow.cpp  mainwindow.h
canvas/: dragmanager.cpp  dragmanager.h  drawcommand.cpp  drawcommand.h  line.cpp  line.h  paintarea.cpp  paintarea.h  paintwidget.cpp  paintwidget.h  rect.cpp  rect.h  rubber.cpp  rubber.h  shape.cpp  shape.h  switchbtn.cpp  switchbtn.h  tri.cpp  tri.h
core/: arap.cpp  arap.h  commondeform.cpp  commondeform.h  corner.h  dialsandknobs.cpp  dialsandknobs.h  group.cpp  group.h  inbetweens.cpp  inbetweens.h  laplaciandeform.cpp  laplaciandeform.h  mesh.cpp  mesh.h  point.h  quad.cpp  quad.h  rectredistration.cpp  rectredistration.h  siftmap.cpp  siftmap.h  stroke.h  strokeinterval.cpp  strokeinterval.h  uvhash.h
core/tools/: tool.cpp  tool.h
gui/: dialsandknobs_ui.cpp  dialsandknobs_ui.h
utils/: geom.h
